<resources>
    <string name="app_name">Twitter Counter</string>
    <string name="char_typed">Characters Typed</string>
    <string name="char_remaining">Characters Remaining</string>
    <string name="start_typing_hint">Start typing! You can enter up to 280 characters</string>
    <string name="copy_text">Copy Text</string>
    <string name="clear_text">Clear Text</string>
    <string name="msg_no_network">No Network</string>
    <string name="msg_can_not_get_data">No data</string>
    <string name="msg_bad_request">Bad Request</string>
    <string name="please_wait">Please Wait</string>
    <string name="post_tweet">Post Tweet</string>
    <string name="no_text_to_clear">No text to clear</string>
    <string name="no_text_to_copy">No text to copy</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="failed_to_copy_text_to_clipboard">Failed to copy text to clipboard</string>
    <string name="tweet_posted_successfully">Your tweet has been posted successfully</string>
    <string name="twitter_character_count">Twitter Character Count</string>
    <string name="num_zero">0</string>
    <string name="symbol_slash">/%1$s</string>
    <string name="unAuthorized_msg">UnAuthorized, please use your credentials</string>

</resources>