<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_twitter" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/color_primary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:strokeColor="@color/color_primary"
        app:strokeWidth="@dimen/_2sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldPrimaryText_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/char_typed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_current_char_count"
                    style="@style/BoldPrimaryText_Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="6"
                    android:text="0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_total_char_allowed"
                    style="@style/BoldPrimaryText_Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/280" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:background="@color/color_primary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:strokeColor="@color/color_primary"
        app:strokeWidth="@dimen/_2sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BoldPrimaryText_Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/char_remaining" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_char_remaining"
                    style="@style/BoldPrimaryText_Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="280" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_input_tweet"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2"
        app:strokeColor="@color/color_gray">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_tweet"
            style="@style/RegularPrimaryText_Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:elevation="@null"
            android:gravity="start"
            android:hint="@string/start_typing_hint"
            android:padding="@dimen/_6sdp" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_copy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_rounded_all_edges"
        android:backgroundTint="@color/color_green"
        android:text="@string/copy_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@+id/cv_input_tweet"
        app:layout_constraintTop_toBottomOf="@+id/cv_input_tweet" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_rounded_all_edges"
        android:backgroundTint="@color/color_red"
        android:text="@string/clear_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@+id/cv_input_tweet"
        app:layout_constraintTop_toBottomOf="@+id/cv_input_tweet" />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_all_edges"
        android:backgroundTint="@color/color_blue"
        android:text="@string/copy_text"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@+id/btn_clear_text"
        app:layout_constraintStart_toStartOf="@+id/btn_copy_text"
        app:layout_constraintTop_toBottomOf="@+id/btn_copy_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
